--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,13 @@
 <h1>Sign Up</h1>
 <%= form_with(model: @user, url: users_path, local: true) do |f| %>
+
   <div>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
+    <%= f.label :first_name %>
+    <%= f.text_field :firstNname %>
+  <div>
+  <div>
+    <%= f.label :last_name %>
+    <%= f.text_field :lastName %>
   <div>
     <%= f.label :email %>
     <%= f.email_field :email %>
