--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,25 @@
 <h1>Sign Up</h1>
 <%= form_with(model: @user, url: users_path, local: true) do |f| %>
 
+  <% if @user.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <ul>
+        <% @user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <div>
     <%= f.label :first_name %>
-    <%= f.text_field :firstNname %>
-  <div>
+    <%= f.text_field :first_name %>
+  </div>
   <div>
     <%= f.label :last_name %>
-    <%= f.text_field :lastName %>
+    <%= f.text_field :last_name %>
+  </div>
   <div>
     <%= f.label :email %>
     <%= f.email_field :email %>
