テーブルのカラムの修正+view、controllerの修正

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,12 +13,12 @@
   <% end %>
 
   <div>
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
+    <%= f.label :family_name %>
+    <%= f.text_field :family_name %>
   </div>
   <div>
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
+    <%= f.label :given_name %>
+    <%= f.text_field :given_name %>
   </div>
   <div>
     <%= f.label :email %>
