--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,10 +2,10 @@
 
 <p>
   <strong>First Name:</strong>
-  <%= @user.first_name %>
+  <%= @user.family_name %>
 </p>
 
 <p>
   <strong>Last Name:</strong>
-  <%= @user.last_name %>
+  <%= @user.given_name %>
 </p>
