--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,12 @@
     <header>
         <nav>
             <ul>
-                <li><%= link_to 'Home', root_path %></li>
-                <li><%= link_to 'Sign Up', signup_path %></li>
-                <li><%= link_to 'Login', login_path %></li>
                 <% if logged_in? %>
-                <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+                <li><%= link_to 'プロフィール表示', user_path(current_user) %></li>
+                <li><%= link_to 'プロフィール編集', edit_user_path(current_user) %></li>
+                <li><%= link_to 'ログアウト', logout_path, method: :delete %></li>
+                <% else %>
+                <li><%= link_to 'ログイン', login_path %></li>
                 <% end %>
             </ul>
         </nav>
