--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>ユーザー情報の編集</h1>
+<h1>基本情報の編集</h1>
 
 <%= form_with(model: @user, local: true) do |f| %>
 <% if @user.errors.any? %>
@@ -32,37 +32,7 @@
     <%= f.email_field :email, value: @user.email || "" %>
 </div>
 
-<h2>必要なプロフィール</h2>
-<div>
-    <%= f.fields_for :necessary_profile do |np| %>
-    <div>
-        <%= np.label :date_of_birth, "生年月日" %>
-        <%= np.date_field :date_of_birth, value: @necessary_profile.date_of_birth%>
-    </div>
-    <div>
-        <%= np.label :residence, "住所" %>
-        <%= np.text_field :residence, value: @necessary_profile.residence || "" %>
-    </div>
-    <div>
-        <%= np.label :job, "職業" %>
-        <%= np.text_field :job, value: @necessary_profile.job || "" %>
-    </div>
-    <% end %>
-</div>
 
-<h2>不要なプロフィール</h2>
-<div>
-    <%= f.fields_for :unnecessary_profile do |up| %>
-    <div>
-        <%= up.label :place_of_birth, "出生地" %>
-        <%= up.text_field :place_of_birth%>
-    </div>
-    <div>
-        <%= up.label :bio, "自己紹介" %>
-        <%= up.text_area :bio, value: @unnecessary_profile.bio || "" %>
-    </div>
-    <% end %>
-</div>
 
 <div class="actions">
     <%= f.submit "更新" %>
